# animeboys-minecraft

./: .gitignore  README.md
animeboys-minecraft-bot/: Cargo.toml  Secrets.default.toml  Secrets.toml
animeboys-minecraft-bot/.cargo/: config.toml
animeboys-minecraft-bot/src/: lib.rs  main.rs
discord-bot/: main.py
terraform/backend/: main.tf  outputs.tf  versions.tf
terraform/minecraft-backup/: .terraform.lock.hcl  main.tf  versions.tf
terraform/minecraft-backup/files/: backup.sh  minecraft.service  user_data.sh
terraform/minecraft-server/: .terraform.lock.hcl  main.tf  outputs.tf  versions.tf
terraform/minecraft-server/ssh/: config  id_rsa.pub
