[package]
name = "animeboys-minecraft-bot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.11.0", features = ["bot-serenity"] }
anyhow = "1.0.69"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.11.0"
tracing = "0.1.37"
aws-config = "0.54.1"
aws-sdk-ec2 = "0.24.0"
aws-types = "0.54.1"
tokio = "1"
