[package]
name = "animeboys-minecraft-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = { version = "0.12.0" }
shuttle-runtime = { version = "0.12.0" }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.12.0"
tokio = { version = "1.26.0" }
tracing = "0.1.37"

aws-config = "0.54.1"
aws-sdk-ec2 = "0.24.0"
aws-types = "0.54.1"
tracing-subscriber = "0.3.17"
